<resources>
    <string name="app_name">FitnessTracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registr_btn_text">Registration</string>
    <string name="login_btn_text">Login</string>
    <string name="email_text_hint">Enter your email</string>
    <string name="password_text_hint">Enter your password</string>
    <string name="repeat_password_hint">Repeat your password</string>
    <string name="first_name_text_hint">Enter your first name</string>
    <string name="last_name_text_hint">Enter your last name</string>
    <string name="hello_text">Welcome to Fitness App</string>
    <string name="fab_tap">Open running screen</string>
    <string name="begin_time">Begin Time</string>
    <string name="time_running">Time Running</string>
    <string name="distance">Distance</string>
    <string name="welcome_login_text">Welcome to login screen</string>
    <string name="welcome_registr_text">Welcome to registration screen</string>
    <string name="error">Error</string>
    <string name="Ok">Okay</string>
    <string name="error_message_email">Invalid email</string>
    <string name="error_message_password">Must be only letters or numbers</string>
    <string name="error_message_repeat_password">Password not matching</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="main_screen">Main Screen</string>
    <string name="notification">Notification</string>
    <string name="logout">LogOut</string>
    <string name="select_time">Select time</string>
    <string name="set_alarm">Set alarm</string>
    <string name="cancel_alarm">Cancel alarm</string>
    <string name="_12_30">12:30</string>
    <string name="name_app">Run and fun</string>
    <string name="finish">Finish</string>
    <string name="start">Start</string>
    <string name="ok_thanks">Okay, thanks</string>
    <string name="gps_enabled">GPS IS NOT ENABLED</string>
    <string name="permissions_enabled">ENABLE PERMISSIONS</string>
    <string name="press_finish">Press the finish button before exiting</string>
    <string name="not_moving">YOU DO NOT MOVING</string>
    <string name="not_internet">Lost Internet Connection</string>
    <string name="select_alarm_time">Select Alarm Time</string>
    <string name="toast_waring">Select a future date</string>
    <string name="alarm">ALARM</string>
    <string name="sure">Sure?</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="successfully">Track successfully save in server</string>
    <string name="waring">For normal operation of the application, go to settings -> applications -> our application -> battery saver -> disable</string>
    <string name="attention">Attention</string>
    <string name="run">run bitch run</string>
    <string name="must_run">you must run</string>
    <string name="check_gps">Check GPS</string>
    <string name="discription_running">Tap button to start running</string>
    <string name="track_fragment_error">Check the internet or check token</string>
    <string name="add_notification">Add notification</string>
    <string name="re_login">Re-login please</string>
    <string name="error_in_db_helpers">Заполнить имя или поля</string>
    <string name="dont_close_app">Just roll up, do not close the app</string>
</resources>