<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp">


    <TextView
        android:id="@+id/begin_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/begin_time"
        app:layout_constraintBottom_toTopOf="@+id/time_running"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/time_running"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_running"
        app:layout_constraintBottom_toTopOf="@+id/distance"
        app:layout_constraintEnd_toEndOf="@+id/begin_time"
        app:layout_constraintStart_toStartOf="@+id/begin_time"
        app:layout_constraintTop_toBottomOf="@+id/begin_time" />

    <TextView
        android:id="@+id/distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/distance"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/time_running"
        app:layout_constraintStart_toStartOf="@+id/time_running"
        app:layout_constraintTop_toBottomOf="@+id/time_running" />
</androidx.constraintlayout.widget.ConstraintLayout>