<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.loginAndRegister.fragments.RegisterAndLoginFragment">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/go_to_login_screen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="40dp"
        android:text="@string/login_btn_text"
        app:layout_constraintBottom_toTopOf="@+id/go_to_register_screen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/go_to_register_screen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/registr_btn_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/go_to_login_screen"
        app:layout_constraintStart_toStartOf="@+id/go_to_login_screen"
        app:layout_constraintTop_toBottomOf="@+id/go_to_login_screen" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_marginBottom="150dp"
        android:gravity="center"
        android:text="@string/hello_text"
        android:textSize="45sp"
        app:layout_constraintBottom_toTopOf="@+id/go_to_login_screen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />
</androidx.constraintlayout.widget.ConstraintLayout>