<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/running_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.running.RunningActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_splash">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/running_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/start_btn_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/running_toolbar">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/discription_running"
                android:textColor="@color/colorTextInList"
                android:textSize="23sp"
                app:layout_constraintBottom_toTopOf="@+id/start_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/start_btn"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginTop="80dp"
                android:text="@string/start"
                android:backgroundTint="@color/orange"
                app:cornerRadius="20dp"
                android:textColor="@color/colorTextInList"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                tools:ignore="UnusedAttribute" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/running_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="50dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/running_toolbar">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextInList"
                android:textSize="32sp"
                app:layout_constraintBottom_toTopOf="@id/finish_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/finish_btn"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginTop="80dp"
                android:backgroundTint="@color/orange"
                app:cornerRadius="20dp"
                android:text="@string/finish"
                android:textColor="@color/colorTextInList"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/time_text"
                tools:ignore="UnusedAttribute" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/finish_running_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="50dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/running_toolbar"
            app:layout_constraintVertical_bias="0.535">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/distance_running"
                android:layout_width="58dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="168dp"
                android:textColor="@color/colorTextInList"
                android:textSize="32sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/finish_trunning_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:textColor="@color/colorTextInList"
                android:textSize="32sp"
                app:layout_constraintEnd_toEndOf="@+id/textView6"
                app:layout_constraintStart_toStartOf="@+id/textView6"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/distance_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="36dp"
                android:text="@string/distance"
                android:textColor="@color/colorTextInList"
                android:textSize="27sp"
                app:layout_constraintBottom_toTopOf="@+id/distance_running"
                app:layout_constraintEnd_toEndOf="@+id/distance_running"
                app:layout_constraintStart_toStartOf="@+id/distance_running" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginTop="96dp"
                android:text="@string/time_running"
                android:textColor="@color/colorTextInList"
                android:textSize="27sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.503"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/menu">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/logout_item"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="bottom">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:src="@drawable/ic_baseline_close_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/notification"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>